--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -1,4 +1,4 @@
-name: build
+name: trivy
 
 on:
   push:
@@ -10,8 +10,8 @@ on:
     - cron: '19 19 * * 6'
 
 jobs:
-  build:
-    name: Build
+  trivy:
+    name: Trivy
     runs-on: "ubuntu-18.04"
     steps:
       - name: Checkout code
@@ -19,12 +19,12 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/my-organization/my-app:${{ github.sha }} ./docker/
+          docker build -t container:${{ github.sha }} ./docker/
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          image-ref: 'container:${{ github.sha }}'
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
