--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   trivy:
     name: Trivy
-    runs-on: "ubuntu-18.04"
+    runs-on: [ self-hosted ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
